public/styles/giscus.css
:root {
    --color--desaturated-yellow: #E0AE4FBB;
    --color--yellow: #F0BE5F;
    --color--orange: #FD854C;
    --color--dark-orange: #E94E1B;
    --color--dark-brown: #432918;
    --color--blue: #273D5F;
    --color--white: #FFFFFF;
    --color--light-grey: #B1A3A3;
    --color--grey: #808080;
    --color--dark-grey: #767676;
    --color--black: #373737;
    --color--dark-black: #000000;

    --text_color: var(--color--black);
    --background_color: var(--color--white);
    --component--muted_color: var(--color--grey);
    --component-disabled_color: var(--color--light-grey);
    --component_border: var(--color--dark-brown);
    
    --button--hover_background-color: var(--color--orange);
    --button_background-color: var(--color--yellow);
    
    --component_border-radius: 5px;

    /*! Extensions from @primer/css/alerts/flash.scss */
    --color-accent-subtle: #ddf4ff;
    --color-social-reaction-bg-hover: var(--color-scale-gray-1);
    --color-social-reaction-bg-reacted-hover: var(--color-scale-blue-1);

    --color-btn-primary-border: var(--component_border);

    --color-btn-primary-disabled-bg: var(--color--desaturated-yellow);
    --color-btn-primary-disabled-border: transparent;
    --color-btn-primary-disabled-text: var(--color--light-grey);

    --color-btn-primary-hover-bg: var(--button--hover_background-color);
    --color-btn-primary-bg: var(--button_background-color);
    --color-btn-primary-text: #3c3c3b;

    --color-fg-default: var(--text_color);
    --color-fg-muted: var(--component-muted_color);

    --color-canvas-default: var(--background_color);
    --color-canvas-inset: var(--color--white);
    --color-canvas-subtle: rgba(128, 128, 128, 0.44);
    --color-scale-gray-1: rgba(128, 128, 128, 0.44);

    --color-accent-fg: #005FCC;
    --color-btn-primary-selected-bg: #005FCC;

    --color-border-default: transparent;
}

body {
    /* adds padding to avoid browser rounding inconsistencies and leaving room for focus outlines */
    margin: 0 1px;
    font-family: Inter, serif;
    font-size: 16px;
}

.link-secondary {
    font-size: 16px !important;
    line-height: 1.4;
}

textarea {
    font-size: 16px;
    padding: 0.5rem;
}

.btn {
    font-size: 16px;
    padding: 0.5rem 0.75rem;
}

.gsc-comment-box-bottom {
    justify-content: flex-end;
    margin: 0;
}

.gsc-comment-box {
    border-width: 0 !important;
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
}

.gsc-comment {
    border-width: 0;
    margin: 0;
    line-height: 1.5;
}

.gsc-comment > div {
    border-width: 0 !important;
}

.gsc-comment-box-main {
    margin: 0;
}

.color-box-border-info {
    border-width: 0 !important;
}

.input-contrast:focus {
    background-color: var(--color-canvas-inset);
    color: black;
}

.input-contrast {
    resize: none;
}

@font-face {
    font-family: "Inter";
    src: url("/fonts/Inter-Full.woff2") format("woff2");
    font-weight: normal;
    font-style: normal;
    font-display: fallback;
}

.btn-primary:disabled {
    cursor: not-allowed;
}

.octicon-smiley {
    fill: #3c3c3b;
}

.gsc-social-reaction-summary-item {
    border: 1px solid var(--component_border);
    background-color: var(--button_background-color);
}

.gsc-direct-reaction-button {
    border: 1px solid var(--component_border) !important;
    background-color: var(--background_color) !important;
    overflow: hidden;
}

.gsc-social-reaction-summary-item-count {
    color: var(--text_color);
}

.has-reacted {
    background-color: var(--color-accent-subtle) !important;
}

.gsc-comment-box-write {
    box-shadow: none !important;
}

.gsc-comment-box-textarea {
    color: var(--text_color) !important;
    border: 1px solid var(--component_border) !important;
    border-radius: var(--component_border-radius);
}

textarea::placeholder {
    color: var(--color--dark-grey);
}

.gsc-comment-header {
    padding-left: 0;
}

.gsc-comment-content {
    padding-left: 0;
}

.gsc-comment-reactions {
    margin-left: 0;
}

@media (width <= 72em) {
    .gsc-comments {
        gap: 0.75em;
    }
}

/* BEGIN HIDE ZONE */
.gsc-comment-box-textarea-extras {
    display: none;
}

.gsc-comment-author > div {
    display: none !important;
}

.gsc-comment-box-markdown-hint {
    display: none !important;
}

.gsc-replies {
    background-color: #036363;
    display: none;
}

.gsc-comment-box-tabs {
    display: none;
}

.gsc-reply-box {
    display: none;
}

.gsc-right-header {
    display: none;
}

.gsc-comment-replies-count {
    display: none;
}

.gsc-upvote-button {
    display: none;
}

.gsc-comments-count-separator {
    display: none;
}

.gsc-replies-count {
    display: none;
}

/* END HIDE ZONE */

